--- a/themes/base_files/scss/_cypht-tiki.scss
+++ b/themes/base_files/scss/_cypht-tiki.scss
@@ -3,6 +3,7 @@
     font-family: $font-family-base;
     color: var(--bs-body-color) !important;
 
+    .hide { display: none !important; }
     // override colors when not using cypht default theme
     img { opacity: 1 !important; max-width: 100%; }
     ul, li:not(.select2-results__option) { background-color: transparent !important; }
@@ -130,12 +131,13 @@
         margin-bottom: 10px;
     }
     .mailbox_list_title { display: inline-block; }
-
+    .msg_controls { position: absolute; top: 25px; left: 50px; }
     .msg_controls .dropdown.on_mobile { display: none; }
     .msg_controls .core_msg_control,
     .msg_controls .btn {
         padding: 1px 3px;
         border-radius: 5px;
+        font-weight: bold;
     }
 
     .msg_text_inner {
@@ -272,26 +274,40 @@
 //
 .mobile {
     .inline-cypht {
-        padding-top: 50px;
+        padding-top: 30px;
 
         .content_cell {
             padding: 20px 0 20px; border: none;
-            display: block !important; min-height: 600px;
+            display: block !important;
+        }
+
+        .message_list .content_title, .message_list .content_title > div:first-child {
+            margin-bottom: 0;
         }
 
         .content_title {
-            display: flex; align-items: center;
-            padding: 0 10px 0 50px;
-            min-height: 60px; max-height: 500px;
-            line-height: normal;
-            font-size: 115%; font-weight: 500;
+            top: -7px;
+            z-index: 2000;
+            background-color: $body-bg !important;
             .list_controls {
                 border: none;
-                background: #fff;
                 width: 100%;
                 padding: 5px 15px;
             }
         }
+
+        .list_controls i.bi-filter-circle {
+            position: absolute;
+            right: 15px;
+            top: 20px;
+            font-size: 150%;
+            z-index: 100;
+        }
+        .imap_filter_form { margin-left: 10px; margin-right: 10px; }
+
+        .message_list .content_title > div:first-child { display: flex; flex-direction: row; }
+        .mailbox_list_title { order: 2 }
+        .msg_headers th { width: 20%; }
 
         .sys_messages {
             top: 0; right: 0; width: 100%; min-height: 5px;
@@ -300,7 +316,7 @@
 
         // mobile main menu
         .folder_toggle {
-            display: block !important; letter-spacing: normal;
+            display: block !important; letter-spacing: normal; z-index: 10000;
             img { width: 24px; height: 30px; margin: -5px 0 0 5px; }
         }
 
@@ -359,7 +375,6 @@
         .compose_to, .compose_body, .compose_server {
             margin: 5px 0;
         }
-        .smtp_send { display: block; margin-bottom: 20px; }
 
         // mobile message list
         .list_settings_link, .refresh_list { width: 20px; height: 20px; }
@@ -367,11 +382,6 @@
         .message_table > tbody >tr > td { padding-right: 10px; }
         .msg_headers td { padding-right: 10px; }
         .long_header th { white-space: normal; word-break: normal; }
-        .msg_controls {
-            width: 100%; height: 43px;
-            top: 0; left: 0 !important; right: 0;
-            padding: 20px 0; margin-left: 90px;
-        }
         .news_cell {
             padding-bottom: 15px !important;
             &.checkbox_cell { width: 40px; padding: 14px 10px 10px !important; }
@@ -387,6 +397,11 @@
         .msg_text { max-width: 100% !important; word-break: break-word; }
         .msg_text_inner { width: 100%; padding: 15px !important; }
         .msg_parts { table-layout: auto; }
+        .msg_controls { position: relative; left: 0 !important; height: auto; padding-top: 0; }
+        .select2-container { min-width: 100px; }
+        #list_controls_menu.show { flex-direction: row; justify-content: center; align-items: center; }
+        #list_controls_menu.show > form { margin: 0 10px }
+        .msg_text table { word-break: normal; }
 
         // groupmail
         .groupmail.message_table {
@@ -430,6 +445,8 @@
             .update_message_list, .hide_folders { display: none; }
         }
     }
+    // Remove the fixed navbar as it will make Cypht navbar not visible
+    .navbar.fixed-top { display: none; }
 }
 
 //
