[ENH] Cypht: fixed sieve filter issues --- * [ENH] Cypht: fixed sieve filter issues
See merge request tikiwiki/tiki!5758

--- a/themes/base_files/scss/_cypht-tiki.scss
+++ b/themes/base_files/scss/_cypht-tiki.scss
@@ -247,6 +247,7 @@
     .toggle_link { margin-right: 10px; }
     .folder_list { min-width: 95%; }
     .move_to_location .folders a:not(.btn), .move_to_location i { color: $dropdown-link-color !important; }
+    .shortcut_table { width: 100%; }
 }
 
 .mobile.tiki-cypht, .mobile.tiki-webmail {
