[NEW] Add to Tiki a second multi-select alternative component that will eventually replace jQuery Select2 --- * Bundle the element-plus-ui.ce and applySelect as one module
* Optimize unit tests for full code coverage

* Leverage happyDom to test the applySelect script

* Ensure the select component is fully covered by the unit test

* Add unit tests

* FIX load locale faillure when Tiki is installed in a subdirectory

* Fix the create new options feature

* Add elementplus preferences allowing to switch on/off the select element and toggling some of its behaviors

* Allow customizing the behavior of the select element via Tiki set preferences

* Make it work with jquery-validation highlighter

* Update the select value when the value prop changes externally

* [ENH] Ensure ensure the handler is attached on element-plus-ui element only once

* Handle multi-selection

* Avoid duplication of the select element referencing the displayed component in the DOM

* Ensure the default value is displayed and the component is able to get the select options when they originate via an ajax request

* [FIX] Tracker edit field: initialize select2 only when its related feature is enabled

* Bound the change event handler to the original select element

* Do not teleport the select dropdown to the body so we don't have to generate its css separately

* Setup and basically render the element-plus select component

See merge request tikiwiki/tiki!5706

--- a/src/js/vue-widgets/element-plus-ui/src/custom.scss
+++ b/src/js/vue-widgets/element-plus-ui/src/custom.scss
@@ -49,3 +49,7 @@
         border-color: var(--bs-danger) var(--bs-danger) var(--el-border-color) var(--bs-danger);
     }
 }
+
+.invalid .el-select__wrapper {
+    --el-border-color: var(--bs-danger);
+}
