[FIX] convert <ins> and <del> HTML elements to spans with css styling when sending out emails as Outlook forces specific coloring otherwise

--- a/themes/base_files/scss/_tiki-selectors.scss
+++ b/themes/base_files/scss/_tiki-selectors.scss
@@ -862,6 +862,15 @@ body.wikitext {
     color: lighten($success, 50%);
 }
 
+// diff email converts <ins> and <del> to spans for better rendering
+span.diffchar.inserted {
+    text-decoration: underline;
+}
+
+span.diffchar.deleted {
+    text-decoration: line-through;
+}
+
 .highlight_word {
     font-size: bold;
 }
