--- a/themes/darkly/scss/_variables.scss
+++ b/themes/darkly/scss/_variables.scss
@@ -64,7 +64,7 @@ $border-color:                 $gray-700;  // default
 
 // Links
 
-$link-color: #0FEBB4; // $success !default; #00C795
+//$link-color: #0FEBB4; // $success !default; #00C795
 
 // Fonts
 
