--- a/themes/fivealive/scss/_css-variables.scss
+++ b/themes/fivealive/scss/_css-variables.scss
@@ -159,3 +159,14 @@ header.navbar.fixed-top {
 }
 
 // - - - - - New admin pages (Unified Admin Backend) - - - - - - - //
+
+//:root {
+//    .fc-event.fc-event-draggable.fc-event-start.fc-event-end.fc-event-past.fc-h-event.tips,
+//    .fc-v-event {
+//        background: var(--bs-secondary-bg) !important;
+//    }
+//    .fc-event-time,
+//    .fc-event-title {
+//        color: var(--bs-body-color) !important;
+//    }
+//}
