--- a/themes/materia/scss/_css-variables.scss
+++ b/themes/materia/scss/_css-variables.scss
@@ -151,3 +151,14 @@
 }
 
 // - - - - - New admin pages (Unified Admin Backend) END - - - - - - - //
+
+:root {
+    .fc-event.fc-event-draggable.fc-event-start.fc-event-end.fc-event-past.fc-h-event.tips,
+    .fc-v-event {
+        background: var(--bs-secondary-bg) !important;
+    }
+    .fc-event-time,
+    .fc-event-title {
+        color: var(--bs-body-color) !important;
+    }
+}
