--- a/themes/slate/scss/_css-variables.scss
+++ b/themes/slate/scss/_css-variables.scss
@@ -155,3 +155,10 @@
 :root {
     --tiki-code-bg: #32383e;
 }
+
+:root {
+    .fc-event.fc-event-draggable.fc-event-start.fc-event-end.fc-event-past.fc-h-event.tips,
+    .fc-v-event {
+        background: var(--bs-secondary-bg) !important;
+    }
+}
