--- a/themes/tikinewt/scss/_css-variables.scss
+++ b/themes/tikinewt/scss/_css-variables.scss
@@ -168,3 +168,15 @@
         }
     }
 }
+
+:root {
+    .fc-event.fc-event-draggable.fc-event-start.fc-event-end.fc-event-past.fc-h-event.tips,
+    .fc-v-event {
+        background: var(--bs-secondary-bg) !important;
+    }
+    .fc-event-time,
+    .fc-event-title {
+        color: var(--bs-body-color) !important;
+    }
+}
+
