--- a/themes/greenvalley/scss/_css-variables.scss
+++ b/themes/greenvalley/scss/_css-variables.scss
@@ -186,5 +186,17 @@ $imagePath: "/images/";
     --tiki-card-bg: transparent;
 }
 
+:root {
+    .fc-event.fc-event-draggable.fc-event-start.fc-event-end.fc-event-past.fc-h-event.tips,
+    .fc-v-event {
+        background: var(--bs-secondary-bg) !important;
+    }
+    .fc-event-time,
+    .fc-event-title {
+        color: var(--bs-body-color) !important;
+    }
+}
+
+
 
 
