--- a/themes/quartz/scss/_css-variables.scss
+++ b/themes/quartz/scss/_css-variables.scss
@@ -162,4 +162,11 @@
     }
 }
 
+:root {
+    .fc-event.fc-event-draggable.fc-event-start.fc-event-end.fc-event-past.fc-h-event.tips,
+    .fc-v-event {
+        background: var(--bs-secondary-bg) !important;
+    }
+}
+
 //
