[NEW] database performance profiling. Allows displaying the relative time... --- * [NEW] database performance profiling. Allows displaying the relative time spent in every SQL queries, relative to each other, and relative to total php processing time.  Allows finding slow queries, unecessary duplicate queries, and aggregate time of prepared statements
See merge request tikiwiki/tiki!5937

--- a/themes/base_files/css/tiki_base.scss
+++ b/themes/base_files/css/tiki_base.scss
@@ -48,6 +48,7 @@
 @import "../scss/_tiki-oauthserver.scss";
 @import "../scss/_tiki-menus.scss";
 @import "../scss/_tiki-debugger_console.scss";
+@import "../scss/_tiki-show_database_query_log.scss";
 //@import "../scss/_pivot-tiki.scss";
 //@import "../scss/_conversejs-tiki.scss";
 //@import "../scss/_tiki-selectors.scss";
