[FIX][UI] Fixed background color in datepicker modal by assigning Bootstrap... --- * [FIX][UI] Fixed background color in datepicker modal by assigning Bootstrap body background CSS variable. Thanks, Merci Jacob.
See merge request tikiwiki/tiki!5953

--- a/src/js/vue-widgets/datetime-picker/src/custom.scss
+++ b/src/js/vue-widgets/datetime-picker/src/custom.scss
@@ -10,6 +10,7 @@
     --dp-secondary-color: var(--bs-secondary);
     --dp-border-color: var(--bs-border-color);
     --dp-menu-border-color: var(--bs-border-color);
+    --dp-background-color: var(--bs-body-bg)
 }
 
 :host {
