[ENH][UX] Tracker rules: Enhance ui-predicate design to match bootstrap --- * [ENH][UX] Tracker rules: Enhance ui-predicate design to match bootstrap (fixing custom css)
* [ENH][UX] Tracker rules: Enhance ui-predicate design to match bootstrap

See merge request tikiwiki/tiki!6027

--- a/lib/vue/lib/ui-predicate-vue.css
+++ b/lib/vue/lib/ui-predicate-vue.css
@@ -1,1 +1,1 @@
-.ui-predicate__main{display:flex}.ui-predicate__row{flex-direction:row}.ui-predicate__col{display:inline-block}.ui-predicate__options{display:flex}
+.ui-predicate__main{display:flex}.ui-predicate__row{flex-direction:row;margin-bottom: 0.375rem;}.ui-predicate__col{display:inline-block}.ui-predicate__options{display:flex}.ui-predicate__option .btn{margin-top: -4px;}.ui-predicate__option .btn:disabled{background-color: rgba( 33, 37, 41, 0.05);}.btn-predicate-remove{margin-right: 0.2rem;}
