--- a/themes/fivealive-lite/scss/_css-variables.scss
+++ b/themes/fivealive-lite/scss/_css-variables.scss
@@ -119,7 +119,7 @@ header.navbar.fixed-top {
     .accordion-item {
         border-width: 0;
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
