--- a/themes/pulse/scss/_css-variables.scss
+++ b/themes/pulse/scss/_css-variables.scss
@@ -104,7 +104,7 @@
     .accordion-item {
         border-width: 0 !important;
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
