--- a/themes/amelia/scss/_css-variables.scss
+++ b/themes/amelia/scss/_css-variables.scss
@@ -94,7 +94,7 @@ $navbar-light-hover-bg: red;
         border-width: 0 !important;
     }
     .accordion-item.search-preferences,
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
@@ -117,7 +117,7 @@ $navbar-light-hover-bg: red;
         border-width: 0 !important;
     }
     .accordion-item.search-preferences,
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
