--- a/themes/cosmo/scss/_css-variables.scss
+++ b/themes/cosmo/scss/_css-variables.scss
@@ -109,7 +109,7 @@
         border-width: 0 !important;
     }
     .accordion-item.search-preferences,
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
