--- a/themes/fivealive/options/watermelon/scss/_variables.scss
+++ b/themes/fivealive/options/watermelon/scss/_variables.scss
@@ -334,7 +334,7 @@ header.navbar.fixed-top {
     --tiki-admin-dropdown-link-hover-color: #{$dropdown-link-hover-color};
     --tiki-admin-dropdown-link-hover-bg: #{$dropdown-link-hover-bg};
     .accordion-item.search-preferences,
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
