--- a/themes/flatly/scss/_css-variables.scss
+++ b/themes/flatly/scss/_css-variables.scss
@@ -91,7 +91,7 @@
     .accordion-item {
         border-width: 0;
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
@@ -113,7 +113,7 @@
     .accordion-item {
         border-width: 0;
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
