--- a/themes/lumen/scss/_css-variables.scss
+++ b/themes/lumen/scss/_css-variables.scss
@@ -99,7 +99,7 @@
     .accordion-item {
         border-color: transparent;
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
@@ -128,7 +128,7 @@
     .accordion-item {
         border-color: transparent;
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
