--- a/themes/lux/scss/_css-variables.scss
+++ b/themes/lux/scss/_css-variables.scss
@@ -106,7 +106,7 @@
     .accordion-item {
         border-color: transparent;
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
