--- a/themes/sandstone/scss/_css-variables.scss
+++ b/themes/sandstone/scss/_css-variables.scss
@@ -88,7 +88,7 @@
     --tiki-admin-dropdown-link-hover-color: #{$dropdown-link-hover-color};
     --tiki-admin-dropdown-link-hover-bg: #{$dropdown-link-hover-bg};
     .accordion-item,
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
         text-transform: uppercase;
@@ -111,7 +111,7 @@
     .accordion-item {
         border-width: 0 !important;
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
         text-transform: uppercase;
