--- a/themes/solar/scss/_css-variables.scss
+++ b/themes/solar/scss/_css-variables.scss
@@ -104,7 +104,7 @@
     .accordion-item {
         border-color:  transparent; // var(--bs-accordion-border-color);
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
@@ -126,7 +126,7 @@
     .accordion-item {
         border-color:  transparent; // var(--bs-accordion-border-color);
     }
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
