--- a/themes/spacelab/scss/_css-variables.scss
+++ b/themes/spacelab/scss/_css-variables.scss
@@ -111,7 +111,7 @@
     .accordion-item {
         border-width: 0 !important;
     }
-    button.was-nav-link.accordion-button,
+    button.accordion-button,
     .accordion-item {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: transparent !important; // var(--tiki-admin-aside-nav-bg) !important;
