--- a/themes/strasa/scss/_css-variables.scss
+++ b/themes/strasa/scss/_css-variables.scss
@@ -102,7 +102,7 @@ $imagePath: "../images/";
     --tiki-admin-dropdown-link-hover-color: #{$navbar-dark-hover-color};
     --tiki-admin-dropdown-link-hover-bg: #{$dropdown-dark-link-hover-bg};
     .accordion-item.search-preferences,
-    button.was-nav-link.accordion-button {
+    button.accordion-button {
         color: var(--tiki-admin-aside-nav-color) !important;
         background: var(--tiki-admin-aside-nav-bg) !important;
     }
