--- a/themes/thenews/scss/_tiki-selectors.scss
+++ b/themes/thenews/scss/_tiki-selectors.scss
@@ -125,7 +125,7 @@ body.fullscreen {
 
 // UAB (Admin)
 // Replicate vertical menu text centering in UAB accordion
-button.was-nav-link.accordion-button {
+button.accordion-button {
     border-left: 1px solid var(--tiki-nav-link-border-left-color);
     border-bottom: 3px solid #09c;
     span.ms-1.narrow-hide {
