[NEW] Introduce the Element Plus Autocomplete component as a future replacement for the jQuery autocomplete widget --- * Fix CI
* Fix CI and page requests allow the presence of the pref elementplus_autocomplete

* Fix unclickable suggestion element

* Fix linter

* Fix the translation and ensure both features work with the accesslib

* [NEW] Preferences: add a way to specify incompatibility between preferences

* User mentions within the textarea work with the element plus autocomplete

* Remove the autocomplete event handler as the target element isn't an autocomplete rather a multi select element

* Integrate the component in all other remaining templates and scripts using the autocompletion

* Test the handle key press event

* Add the onEnter API and integrate the component in tiki-admin_transitions.tpl

* Integrate the new autocomplete component in messu-compose.tpl

* Integrate the new autocomplete component in the template "find.tpl"

* Integrate trackervalue autocompletion

* Ensure autocompletion works for permissions and preferences fields

* Add tests for the integration fixes in Autocomplete.vue, remote.js, applyAutocomplete.js

* Fix tests.
TODO: - Add tests for the additional lines in Autocomplete.vue, remote.js, applyAutocomplete.js

* Introduduce the elementplus_autocomplete pref, and overide the jq_autocomplete with this latter in tiki-admin_toolbars.js and the Autocomplete smarty function

* A few integration fixes: ensure the value key can be customized for remote data, ensure the input can take a placeholder and its update automatically updates the original input

* Use istanbul for code coverage report instead of v8 for more accurate reports

* Implement autocomplete as a replacement to fn.tiki("autocomplete") and make a few fixes ensuring that the Autocomplete component value changed with user input and fetching data works and correctly displayed in the dropdown

* Unit test the applyAutocomplete utility function

* Write unit tests for all the

--- a/themes/base_files/scss/_tiki-boxes_and_cards.scss
+++ b/themes/base_files/scss/_tiki-boxes_and_cards.scss
@@ -4,6 +4,16 @@
     display: inline;
 }
 
+.adminoption {
+    align-items: center;
+}
+
+.tikihelp-reset-wrapper {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
 // Modules
 .modules {
     position: relative;
