--- a/themes/base_files/scss/_tiki-selectors.scss
+++ b/themes/base_files/scss/_tiki-selectors.scss
@@ -1173,3 +1173,28 @@ blockquote {
 .profile-tab-content h2{
     margin-top:0;
 }
+
+[data-mobile-tooltip] {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+[data-mobile-tooltip]::after {
+    content: attr(data-mobile-tooltip);
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+    display: none;
+    z-index: 1;
+}
+
+[data-mobile-tooltip].show-tooltip::after {
+    display: block;
+}
