[FIX] Large tables icon toggle didn't work properly --- * [FIX] large tables icon toggle didnt work properly
See merge request tikiwiki/tiki!5662

--- a/themes/base_files/css/tiki_base.scss
+++ b/themes/base_files/css/tiki_base.scss
@@ -75,9 +75,8 @@
 }
 // Icon to toggle table formatting
 .toggle-table-wrap .btn {
-  font-family: 'Font Awesome 6 Free' !important;
-  font-weight: 600;
-  font-size: 1.25rem;
+    font-family: 'Font Awesome 6 Free';
+    font-size: 1.25rem;
 }
 
 //Cypth select2
