--- a/themes/base_files/scss/_select2-tiki.scss
+++ b/themes/base_files/scss/_select2-tiki.scss
@@ -17,3 +17,14 @@
 div[class^='col'] > .select2-container, div[class*=' col'] > .select2-container {
     display: block;
 }
+
+.tiki[data-bg-theme=dark] {
+    .select2-container--bootstrap-5 .select2-selection--single .select2-selection__clear,
+    .select2-container--bootstrap-5 .select2-selection--multiple .select2-selection__clear {
+        background: #fff0 url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") 50%/.75rem auto no-repeat !important;
+    }
+    .select2-container--bootstrap-5 .select2-selection--single,
+    .select2-container--bootstrap-5 .select2-selection--multiple {
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+    }
+}
